--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/walmart_task?&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1998
+server.port=80
+spring.datasource.url=jdbc:mysql://database-1.cxgldbz9gxdr.ap-south-1.rds.amazonaws.com/wallmart?&useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=Pradeepat1998
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 consumerid=6ef7b5f4-b9a8-4359-8cc5-fe2fbaf23927
 privatekeyversion=1
-filepath=C://walmart_key//walmart-private-key
+filepath=/home/ubuntu/actions-runner/privatekey.txt
 filepassword=1998
 wallmartproducturl-tv=https://developer.api.walmart.com/api-proxy/service/affil/product/v2/search?query=tv&facet=on&facet.filter=condition:New&facet.filter=smart_tv_platform:Android TV&facet.filter=smart_tv_platform:Roku TV&facet.filter=smart_tv_platform:SmartCast&facet.filter=smart_tv_platform:Tizen&facet.filter=smart_tv_platform:WebOS
 wallmartproducturl-washing=https://developer.api.walmart.com/api-proxy/service/affil/product/v2/search?query=wifi_washing_machine&facet=on&facet.filter=condition:New&facet.filter=cat_id:Home
